--- a/index/index.html
+++ b/index/index.html
@@ -248,5 +248,5 @@
 	</article>
 </section>
 </body>
-<p style="text-align:center; color:black">©Slovenske železnice - Tovorni promet, 2005 | Pravna obvestila</p>
+<p style="text-align:center; color:white">©Slovenske železnice - Tovorni promet, 2005 | Pravna obvestila</p>
 </html>
